# Purin

./: .gitignore  CMakeLists.txt  README.md
include/: imgui_impl_opengl3.h
include/glad/: glad.h
lib/: glad.c
src/: main.cpp
src/core/: Component.h  Editor.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Quaternion.cpp  Quaternion.h  Renderer.h  RigidBody.h  Scene.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h
src/resources/shaders/: fragment.frag  vertex.vert
src/shaders/fragment/: fragment.frag
src/shaders/vertex/: vertex.vert
src/utils/: camera.h  physics.h  shader.cpp  shader.h
